Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79389

Assimp importer can create invalid QML ids

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 5.14.0
    • 5.14.0 Beta 1
    • Quick: 3D
    • None
    • 0cbc11742a73c12ccff2536757d9336752521b3f

      sanitizeQmlId() function in qssgqmlutilities.cpp can generate ids Design Studio can't digest. The problem is the c.isLetter() match, which allows for non-ascii letters. The allowed characters check should match the one in Design Studio.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes