Fix qml id and mesh file name generation in assimp importer

Changed the qml id generation to match what Design Studio expects.
Also added name sanitization for mesh file names.

Change-Id: I607467bb26bd2afd9330e55f78dff6641ecd26bd
Fixes: QTBUG-79389
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>